hphp/test/zend/good/ext/mbstring/tests/mb_strtoupper_variation1.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_strtoupper') or die("skip mb_strtoupper() is not available in this build");
?>