hphp/test/zend/bad/ext/mbstring/tests/mb_strripos_error2.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_strripos') or die("skip mb_strripos() is not available in this build");
?>